--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <header>
-    <h1>GoIT Homeworks</h1>
+    <h1>GoIT FE5 Tech Skills Homeworks</h1>
     <nav>
       <a href="module_1-2/index.html" target="_blank" title="Открыть домашнюю работу №1-2">Homework #1-2</a>
-      <a href="module_3/index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #1-2</a>
-      <a href="">Homework #3 Bonus</a>
+      <a href="module_3/index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #3</a>
+      <a href="module_3-bonus/index.html" target="_blank" title="Открыть домашнюю работу №3 Бонус">Homework #3 Bonus</a>
     </nav>
   </header>
 </body>
