--- a/module_3/index.html
+++ b/module_3/index.html
@@ -5,39 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Resume</title>
+    <title>Bycicle</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Рашевский Юрий Николаевич</h1>
-        <img src="img/photo.jpg" title="Это Я" alt="Здесь моя фотография" />
-    </header>
-    <main>
-        <p>Свободный художник</p>
-        <section>
-            <h3>Хочу учить фронтенд, потому что:</h3>
-            <ul>
-                <li>Это интересно</li>
-                <li>Я обожаю технологии</li>
-                <li>Мне нравится этим заниматься</li>
-                <li>Я хочу достичь успехав этом</li>
-                <li>Есть идеи на счёт нескольких хороших продуктов, которые нужно сделать :)</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Мой контактный телефон:</h3>
-            <p>+38 050 876 17 45</p>
-            <h3>Мой профиль Facebook:</h3>
-            <p><a href="https://www.facebook.com/yuri.rashevsky">Facebook</a></p>
-        </section>
-        <section>
-            <h3>Мой фидбек:</h3>
-            <p>Всё будет хорошо!</p>
-        </section>
-    </main>
 </body>
 
 </html>
