--- a/module_3/index.html
+++ b/module_3/index.html
@@ -11,53 +11,53 @@
 </head>
 
 <body>
-  <div class="container">
-    <header>
-      <a href="">
-        <img src="img/logo.png" alt="Здесь должен быть логотип" />
-      </a>
-      <nav>
-        <ul class="navigation">
-          <li class="nav_item"><a class="first_nav_item" href="#">Главная</a></li>
-          <li class="nav_item"><a href="#">Товары</a></li>
-          <li class="nav_item"><a href="#">О_нас</a></li>
-          <li class="nav_item"><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div class="content">
-      <div class="box box1">
-        <ul class="menu">
-          <li class="menu_item"><a href="#">Ноутбуки</a></li>
-          <li class="menu_item"><a href="#">Планшеты</a></li>
-          <li class="menu_item"><a href="#">Телефоны</a></li>
-          <li class="menu_item"><a href="#">Телевизоры</a></li>
-          <li class="menu_item"><a href="#">Бытовая техника</a></li>
-          <li class="menu_item"><a href="#">Атовтовары</a></li>
-        </ul>
-      </div>
-      <div class="box box2">
-        <div class="border">
-          <img src="img/img1.jpg" alt="Велосипед" />
+    <div class="container">
+        <header>
+            <a href="">
+                <img src="img/logo.png" alt="Здесь должен быть логотип" />
+            </a>
+            <nav>
+                <ul class="navigation">
+                    <li class="nav_item"><a class="first_nav_item" href="#">Главная</a></li>
+                    <li class="nav_item"><a href="#">Товары</a></li>
+                    <li class="nav_item"><a href="#">О_нас</a></li>
+                    <li class="nav_item"><a href="#">Контакты</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="content">
+            <div class="box box1">
+                <ul class="menu">
+                    <li class="menu_item"><a href="#">Ноутбуки</a></li>
+                    <li class="menu_item"><a href="#">Планшеты</a></li>
+                    <li class="menu_item"><a href="#">Телефоны</a></li>
+                    <li class="menu_item"><a href="#">Телевизоры</a></li>
+                    <li class="menu_item"><a href="#">Бытовая техника</a></li>
+                    <li class="menu_item"><a href="#">Атовтовары</a></li>
+                </ul>
+            </div>
+            <div class="box box2">
+                <div class="border">
+                    <img src="img/img1.jpg" alt="Велосипед" />
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                    in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-          in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
+        <footer>
+            <div class="links">
+                <a class="first_link" href="#" target="_blank">Главная</a>
+                <a href="#" target="_blank">Товары</a>
+                <a href="#" target="_blank">О_нас</a>
+                <a href="#" target="_blank">Контакты</a>
+                <p class="copy">2014 &copy; All rights reserved</p>
+            </div>
+        </footer>
     </div>
-    <footer>
-      <div class="links">
-        <a class="first_link" href="#" target="_blank">Главная</a>
-        <a href="#" target="_blank">Товары</a>
-        <a href="#" target="_blank">О_нас</a>
-        <a href="#" target="_blank">Контакты</a>
-        <p class="copy">2014 &copy All rights reserved</p>
-      </div>
-    </footer>
-  </div>
 </body>
 
 </html>
