Work in progress

--- a/module_3/index.html
+++ b/module_3/index.html
@@ -1,17 +1,58 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 
 <head>
-    <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
-    <title>Bycicle</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Fitness</title>
+  <link rel="stylesheet" href="css/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    
+  <header class="margin">
+    <a href="http://yurirashevsky.github.io/" target="_blank">
+      <img class="logo" src="img/logo.png" alt="Логотип">
+    </a>
+  </header>
+  <nav class="margin main-menu">
+    <ul>
+      <li><a class="first-m-menu-item" href="#">Главная</a></li>
+      <li><a class="m-menu-item" href="#">Товары</a></li>
+      <li><a class="m-menu-item" href="#">О_нас</a></li>
+      <li><a class="m-menu-item" href="#">Контакты</a></li>
+    </ul>
+  </nav>
+  <main class="margin">
+    <aside>
+      <ul class="menu">
+        <li class="menu_item"><a href="#">Ноутбуки</a></li>
+        <li class="menu_item"><a href="#">Планшеты</a></li>
+        <li class="menu_item"><a href="#">Телефоны</a></li>
+        <li class="menu_item"><a href="#">Телевизоры</a></li>
+        <li class="menu_item"><a href="#">Бытовая техника</a></li>
+        <li class="menu_item"><a href="#">Атовтовары</a></li>
+      </ul>
+    </aside>
+    <article class="bicycle">
+      <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
+        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </article>
+  </main>
+  <footer class="margin">
+    <a href="#" target="_blank">Главная</a>
+    <a href="#" target="_blank">Товары</a>
+    <a href="#" target="_blank">О_нас</a>
+    <a href="#" target="_blank">Контакты</a>
+    <p>2014 &copy; All rights reserved</p>
+  </footer>
 </body>
 
 </html>
