Work in progress

--- a/module_3/index.html
+++ b/module_3/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="ua">
 
 <head>
   <meta charset="UTF-8">
@@ -26,32 +26,31 @@
     </ul>
   </nav>
   <main class="margin">
-    <aside>
-      <ul class="menu">
-        <li class="menu_item"><a href="#">Ноутбуки</a></li>
-        <li class="menu_item"><a href="#">Планшеты</a></li>
-        <li class="menu_item"><a href="#">Телефоны</a></li>
-        <li class="menu_item"><a href="#">Телевизоры</a></li>
-        <li class="menu_item"><a href="#">Бытовая техника</a></li>
-        <li class="menu_item"><a href="#">Атовтовары</a></li>
+    <aside class="sidebar">
+      <ul >
+        <li><a class="sidebar-item first-item" href="#">Ноутбуки</a></li>
+        <li><a class="sidebar-item" href="#">Планшеты</a></li>
+        <li><a class="sidebar-item" href="#">Телефоны</a></li>
+        <li><a class="sidebar-item" href="#">Телевизоры</a></li>
+        <li><a class="sidebar-item" href="#">Бытовая техника</a></li>
+        <li><a class="sidebar-item" href="#">Атовтовары</a></li>
       </ul>
     </aside>
     <article class="bicycle">
-      <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
+      <div class="frame">
+        <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
+      </div>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing
-        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
       </p>
     </article>
   </main>
-  <footer class="margin">
+  <footer class="margin links">
     <a href="#" target="_blank">Главная</a>
     <a href="#" target="_blank">Товары</a>
     <a href="#" target="_blank">О_нас</a>
     <a href="#" target="_blank">Контакты</a>
-    <p>2014 &copy; All rights reserved</p>
+    <p class="copy">2014 &copy; All rights reserved</p>
   </footer>
 </body>
 
