--- a/module_3/index.html
+++ b/module_3/index.html
@@ -27,7 +27,7 @@
   </nav>
   <main class="margin">
     <aside class="sidebar">
-      <ul >
+      <ul>
         <li><a class="sidebar-item first-item" href="#">Ноутбуки</a></li>
         <li><a class="sidebar-item" href="#">Планшеты</a></li>
         <li><a class="sidebar-item" href="#">Телефоны</a></li>
@@ -41,7 +41,9 @@
         <img src="img/image.jpg" alt="Велосипед" title="Велосипед">
       </div>
       <p>
-        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
+        Lorem Ipsum - це текст-"риба", що використовується в друкарстві та дизайні. Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя, коли невідомий друкар взяв шрифтову гранку та склав на ній підбірку зразків шрифтів. "Риба" не тільки успішно пережила
+        п'ять століть, але й прижилася в електронному верстуванні, залишаючись по суті незмінною. Вона популяризувалась в 60-их роках минулого сторіччя завдяки виданню зразків шрифтів Letraset, які містили уривки з Lorem Ipsum, і вдруге - нещодавно завдяки
+        програмам комп'ютерного верстування на кшталт Aldus Pagemaker, які використовували різні версії Lorem Ipsum.
       </p>
     </article>
   </main>
