--- a/module_3/index.html
+++ b/module_3/index.html
@@ -19,7 +19,7 @@
   </header>
   <nav class="margin main-menu">
     <ul>
-      <li><a class="first-m-menu-item" href="#">Главная</a></li>
+      <li><a class="m-menu-item" href="#">Главная</a></li>
       <li><a class="m-menu-item" href="#">Товары</a></li>
       <li><a class="m-menu-item" href="#">О_нас</a></li>
       <li><a class="m-menu-item" href="#">Контакты</a></li>
@@ -28,7 +28,7 @@
   <main class="margin">
     <aside class="sidebar">
       <ul>
-        <li><a class="sidebar-item first-item" href="#">Ноутбуки</a></li>
+        <li><a class="sidebar-item" href="#">Ноутбуки</a></li>
         <li><a class="sidebar-item" href="#">Планшеты</a></li>
         <li><a class="sidebar-item" href="#">Телефоны</a></li>
         <li><a class="sidebar-item" href="#">Телевизоры</a></li>
