--- a/module_4/index.html
+++ b/module_4/index.html
@@ -11,8 +11,15 @@
 </head>
 
 <body>
-  <header class="margin">
-    <a href="http://yurirashevsky.github.io/" target="_blank">    </a>
+  <header class="">
+    <div class="header-t">
+      <a href="http://yurirashevsky.github.io/" target="_blank">
+        <img class="logo" src="img/logo.png" alt="Логотип" />
+      </a>
+    </div>
+    <div class="header-bm">
+      <img src="img/photo.png" alt="Срочно загружайте фото!" />
+    </div>
   </header>
   <nav class="main-menu">
     <ul>
