--- a/module_4/index.html
+++ b/module_4/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fitness</title>
+  <title>Asia-Holidays</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -24,7 +24,15 @@
   <nav class="main-menu">
     <ul>
       <li><a class="m-menu-item" href="#">Главная</a></li>
-      <li><a class="m-menu-item" href="#">Путешествие</a></li>
+      <li><a class="m-menu-item" href="#">Путешествие</a>
+        <!-- <ul>
+          <li><a href="#">Путешествие 1</a></li>
+          <li><a href="#">Путешествие 2</a></li>
+          <li><a href="#">Путешествие 3</a></li>
+          <li><a href="#">Путешествие 4</a></li>
+          <li><a href="#">Путешествие 5</a></li>
+        </ul> -->
+      </li>
       <li><a class="m-menu-item" href="#">Услуги</a></li>
       <li><a class="m-menu-item" href="#">Партнёрам</a></li>
       <li><a class="m-menu-item" href="#">Отзывы клиентов</a></li>
