--- a/module_4/index.html
+++ b/module_4/index.html
@@ -24,7 +24,10 @@
   <nav class="main-menu">
     <ul>
       <li><a class="m-menu-item" href="#">Главная</a></li>
-      <li><a class="m-menu-item" href="#">Путешествие</a>
+      <li>
+        <a class="m-menu-item arrow" href="#">Путешествие
+          <img class="arrow" src="img/arrow.svg">
+        </a>
         <!-- <ul>
           <li><a href="#">Путешествие 1</a></li>
           <li><a href="#">Путешествие 2</a></li>
@@ -33,21 +36,60 @@
           <li><a href="#">Путешествие 5</a></li>
         </ul> -->
       </li>
-      <li><a class="m-menu-item" href="#">Услуги</a></li>
-      <li><a class="m-menu-item" href="#">Партнёрам</a></li>
+      <li>
+        <a class="m-menu-item" href="#">Услуги
+          <img class="arrow" src="img/arrow.svg">
+        </a>
+      </li>
+      <li>
+        <a class="m-menu-item" href="#">Партнёрам
+          <img class="arrow" src="img/arrow.svg">
+        </a>
+      </li>
       <li><a class="m-menu-item" href="#">Отзывы клиентов</a></li>
       <li><a class="m-menu-item" href="#">О нас</a></li>
       <li><a class="m-menu-item" href="#">Контакты</a></li>
     </ul>
   </nav>
-  <main class="margin">
+  <main class="content">
     <section class="info">
+      <h2 class="section-name">Информация</h2>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
     </section>
     <section class="news">
+      <h2 class="section-name">Новости</h2>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
+      <p>Lorem ipsum dolor sit amet</p>
     </section>
   </main>
-  <footer class="links">
-    <p class="copy">Copyright&copy; asia-holidays.com 2010</p>
+  <footer class="copy">
+    <p>Copyright&copy; asia-holidays.com 2010</p>
   </footer>
 </body>
 
