--- a/module_4/index.html
+++ b/module_4/index.html
@@ -11,86 +11,88 @@
 </head>
 
 <body>
-  <header class="">
-    <div class="header-t">
-      <a href="http://yurirashevsky.github.io/" target="_blank">
-        <img class="logo" src="img/logo.png" alt="Логотип" />
-      </a>
-    </div>
-    <div class="header-bm">
-      <img src="img/photo.png" alt="Срочно загружайте фото!" />
-    </div>
-  </header>
-  <nav class="main-menu">
-    <ul>
-      <li><a class="m-menu-item" href="#">Главная</a></li>
-      <li>
-        <a class="m-menu-item arrow" href="#">Путешествие
-          <img class="arrow" src="img/arrow.svg">
+  <div class="wrapper">
+    <header class="">
+      <div class="header-t">
+        <a href="http://yurirashevsky.github.io/" target="_blank">
+          <img class="logo" src="img/logo.png" alt="Логотип" />
         </a>
-        <!-- <ul>
-          <li><a href="#">Путешествие 1</a></li>
-          <li><a href="#">Путешествие 2</a></li>
-          <li><a href="#">Путешествие 3</a></li>
-          <li><a href="#">Путешествие 4</a></li>
-          <li><a href="#">Путешествие 5</a></li>
-        </ul> -->
-      </li>
-      <li>
-        <a class="m-menu-item" href="#">Услуги
-          <img class="arrow" src="img/arrow.svg">
-        </a>
-      </li>
-      <li>
-        <a class="m-menu-item" href="#">Партнёрам
-          <img class="arrow" src="img/arrow.svg">
-        </a>
-      </li>
-      <li><a class="m-menu-item" href="#">Отзывы клиентов</a></li>
-      <li><a class="m-menu-item" href="#">О нас</a></li>
-      <li><a class="m-menu-item" href="#">Контакты</a></li>
-    </ul>
-  </nav>
-  <main class="content">
-    <section class="info">
-      <h2 class="section-name">Информация</h2>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-    </section>
-    <section class="news">
-      <h2 class="section-name">Новости</h2>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-      <p>Lorem ipsum dolor sit amet</p>
-    </section>
-  </main>
+      </div>
+      <div class="header-bm">
+        <img src="img/photo.png" alt="Срочно загружайте фото!" />
+      </div>
+    </header>
+    <nav class="main-menu">
+      <ul>
+        <li><a class="m-menu-item" href="#">Главная</a></li>
+        <li>
+          <a class="m-menu-item arrow" href="#">Путешествие
+            <img class="arrow" src="img/arrow.svg">
+          </a>
+          <!-- <ul>
+            <li><a href="#">Путешествие 1</a></li>
+            <li><a href="#">Путешествие 2</a></li>
+            <li><a href="#">Путешествие 3</a></li>
+            <li><a href="#">Путешествие 4</a></li>
+            <li><a href="#">Путешествие 5</a></li>
+          </ul> -->
+        </li>
+        <li>
+          <a class="m-menu-item" href="#">Услуги
+            <img class="arrow" src="img/arrow.svg">
+          </a>
+        </li>
+        <li>
+          <a class="m-menu-item" href="#">Партнёрам
+            <img class="arrow" src="img/arrow.svg">
+          </a>
+        </li>
+        <li><a class="m-menu-item" href="#">Отзывы клиентов</a></li>
+        <li><a class="m-menu-item" href="#">О нас</a></li>
+        <li><a class="m-menu-item" href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    <main class="content">
+      <section class="info">
+        <h2 class="section-name">Информация</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+      </section>
+      <section class="news">
+        <h2 class="section-name">Новости</h2>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+        <p>Lorem ipsum dolor sit amet</p>
+      </section>
+    </main>    
+  </div>
   <footer class="copy">
-    <p>Copyright&copy; asia-holidays.com 2010</p>
-  </footer>
+      <p>Copyright&copy; asia-holidays.com 2010</p>
+    </footer>
 </body>
 
 </html>
