--- a/module_4/index.html
+++ b/module_4/index.html
@@ -15,8 +15,46 @@
     <header class="">
       <div class="header-t">
         <a href="http://yurirashevsky.github.io/" target="_blank">
-          <img class="logo" src="img/logo.png" alt="Логотип" />
+          <img class="logo" src="img/logo.png" alt="Логотип">
         </a>
+        <ul class="flags">
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/i_flag.png" alt="Флаг Индии">
+              <p>Индия</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/n_flag.png" alt="Флаг Индии">
+              <p>Непал</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/t_flag.png" alt="Флаг Индии">
+              <p>Тибет</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/b_flag.png" alt="Флаг Индии">
+              <p>Бутан</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/s_flag.png" alt="Флаг Индии">
+              <p>Шри-Лпнка</p>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <img src="img/m_flag.png" alt="Флаг Индии">
+              <p>Мальдивы</p>
+            </a>
+          </li>
+        </ul>
       </div>
       <div class="header-bm">
         <img src="img/photo.png" alt="Срочно загружайте фото!" />
@@ -88,7 +126,7 @@
         <p>Lorem ipsum dolor sit amet</p>
         <p>Lorem ipsum dolor sit amet</p>
       </section>
-    </main>    
+    </main>
   </div>
   <footer class="copy">
       <p>Copyright&copy; asia-holidays.com 2010</p>
