--- a/module_4/index.html
+++ b/module_4/index.html
@@ -17,6 +17,12 @@
         <a href="http://yurirashevsky.github.io/" target="_blank">
           <img class="logo" src="img/logo.png" alt="Логотип">
         </a>
+        <address class="contacts">
+          <h2 class="contacts-h">Наши контакты:</h2>
+          +9 098 765 4321 <br>
+          +9 012 345 6890 <br>
+          <a href="mailto:info@asia-holidays.com">info@asia-holidays.com</a>
+        </address>
         <ul class="flags">
           <li>
             <a href="#" target="_blank">
