--- a/module_4/index.html
+++ b/module_4/index.html
@@ -16,6 +16,9 @@
       <div class="header-t">
         <a href="http://yurirashevsky.github.io/" target="_blank">
           <img class="logo" src="img/logo.png" alt="Логотип">
+          <p class="descript">
+            Путешествия по Азии
+          </p>
         </a>
         <address class="contacts">
           <h2 class="contacts-h">Наши контакты:</h2>
