--- a/module_4/index.html
+++ b/module_4/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wrapper">
-    <header class="">
+    <header>
       <div class="header-t">
         <a href="http://yurirashevsky.github.io/" target="_blank">
           <img class="logo" src="img/logo.png" alt="Логотип">
@@ -73,16 +73,16 @@
       <ul>
         <li><a class="m-menu-item" href="#">Главная</a></li>
         <li>
-          <a class="m-menu-item arrow" href="#">Путешествие
+          <a class="m-menu-item" href="#">Путешествие
             <img class="arrow" src="img/arrow.svg">
           </a>
-          <!-- <ul>
+          <ul class="submenu">
             <li><a href="#">Путешествие 1</a></li>
             <li><a href="#">Путешествие 2</a></li>
             <li><a href="#">Путешествие 3</a></li>
             <li><a href="#">Путешествие 4</a></li>
             <li><a href="#">Путешествие 5</a></li>
-          </ul> -->
+          </ul>
         </li>
         <li>
           <a class="m-menu-item" href="#">Услуги
