--- a/module_4/index.html
+++ b/module_4/index.html
@@ -69,9 +69,9 @@
         <img src="img/photo.png" alt="Срочно загружайте фото!" />
       </div>
     </header>
-    <nav class="main-menu">
+    <nav class="menu">
       <ul>
-        <li><a class="m-menu-item" href="#">Главная</a></li>
+        <li><a href="#">Главная</a></li>
         <li>
           <a class="m-menu-item" href="#">Путешествие
             <img class="arrow" src="img/arrow.svg">
@@ -85,18 +85,27 @@
           </ul>
         </li>
         <li>
-          <a class="m-menu-item" href="#">Услуги
+          <a href="#">Услуги
             <img class="arrow" src="img/arrow.svg">
           </a>
+          <ul class="submenu">
+            <li><a href="#">Услуги 1</a></li>
+            <li><a href="#">Услуги 2</a></li>
+            <li><a href="#">Услуги 3</a></li>
+          </ul>
         </li>
         <li>
-          <a class="m-menu-item" href="#">Партнёрам
+          <a href="#">Партнёрам
             <img class="arrow" src="img/arrow.svg">
           </a>
+          <ul class="submenu">
+            <li><a href="#">Партнёрам 1</a></li>
+            <li><a href="#">Партнёрам 2</a></li>            
+          </ul>
         </li>
-        <li><a class="m-menu-item" href="#">Отзывы клиентов</a></li>
-        <li><a class="m-menu-item" href="#">О нас</a></li>
-        <li><a class="m-menu-item" href="#">Контакты</a></li>
+        <li><a href="#">Отзывы клиентов</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
     <main class="content">
