--- a/module_4/index.html
+++ b/module_4/index.html
@@ -100,7 +100,7 @@
           </a>
           <ul class="submenu">
             <li><a href="#">Партнёрам 1</a></li>
-            <li><a href="#">Партнёрам 2</a></li>            
+            <li><a href="#">Партнёрам 2</a></li>
           </ul>
         </li>
         <li><a href="#">Отзывы клиентов</a></li>
@@ -120,6 +120,9 @@
         <p>Lorem ipsum dolor sit amet</p>
         <p>Lorem ipsum dolor sit amet</p>
       </section>
+      <div class="the-hole">
+
+      </div>
       <section class="news">
         <h2 class="section-name">Новости</h2>
         <p>Lorem ipsum dolor sit amet</p>
