--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <a href="module_1-2/index.html" target="_blank" title="Открыть домашнюю работу №1-2">Homework #1-2</a>
             <a href="module_3/index.html" target="_blank" title="Открыть домашнюю работу №3">Homework #3</a>
             <a href="module_3-bonus/index.html" target="_blank" title="Открыть домашнюю работу №3 Бонус">Homework #3 Bonus</a>
-            <a href="module_4/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4</a>
+            <a href="module_4/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (svg icon)</a>
+            <a href="module_4_css/index.html" target="_blank" title="Открыть домашнюю работу №4">Homework #4 (css icon)</a>
         </nav>
     </header>
 </body>
