--- a/module_4_css/index.html
+++ b/module_4_css/index.html
@@ -73,9 +73,7 @@
       <ul>
         <li><a href="#">Главная</a></li>
         <li>
-          <a class="m-menu-item" href="#">Путешествие
-            <img class="arrow" src="img/arrow.svg">
-          </a>
+          <a class="arrow-down" href="#">Путешествие</a>
           <ul class="submenu">
             <li><a href="#">Путешествие 1</a></li>
             <li><a href="#">Путешествие 2</a></li>
@@ -85,9 +83,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Услуги
-            <img class="arrow" src="img/arrow.svg">
-          </a>
+          <a href="#">Услуги</a>
           <ul class="submenu">
             <li><a href="#">Услуги 1</a></li>
             <li><a href="#">Услуги 2</a></li>
@@ -95,9 +91,7 @@
           </ul>
         </li>
         <li>
-          <a href="#">Партнёрам
-            <img class="arrow" src="img/arrow.svg">
-          </a>
+          <a href="#">Партнёрам</a>
           <ul class="submenu">
             <li><a href="#">Партнёрам 1</a></li>
             <li><a href="#">Партнёрам 2</a></li>
