Homework #5-1 Background Repair

--- a/goitfe5homeworks/html/module_5_1/index.html
+++ b/goitfe5homeworks/html/module_5_1/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="group">
-    <ul class="main-menu ">
+    <ul class="first-menu ">
       <li>
         <a href="#">Meu YouBike</a>
       </li>
